commit d'ajout de tout

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,20 +1,31 @@
 <!DOCTYPE html>
 
-<html xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<head th:insert="fragments/fragments.html ::headertags">
+    <title>Bilbothèque</title>
+
 </head>
+
 <body>
-<table align="center">
-    <tr>
-        <td>Users</td>
-    </tr>
-    <tr th:each="user: ${users}">
-        <td th:text ="${user.name}">user</td>
-        <td th:text ="${user.firstName}">user1</td>
-        <td th:text ="${user.userName}">user2</td>
-    </tr>
-</table>
+
+<div th:insert="fragments/fragments.html :: nav"></div>
+
+<section id="about" class="container-fluid">
+    <div class="row">
+
+    </div>
+    <div class="row">
+        <div class="heading">
+            <h1> Bibliothèque Municipale</h1>
+        </div>
+    </div>
+</section>
+
+
+<footer th:insert="fragments/fragments.html ::footer" class="text-center">
+</footer>
+<div th:insert="fragments/fragments.html :: scripts"></div>
+
 </body>
+
 </html>
