--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -67,7 +67,7 @@
                     <div class="form-group row">
                         <div class="col-sm-12">
                             <div style="text-align: center">
-                                <button type="submit" class="btn btn-outline-light">S'inscrire</button>
+                                <button type="submit" class="btn btn-outline-dark">S'inscrire</button>
                             </div>
                         </div>
                     </div>
@@ -76,7 +76,7 @@
             </div>
         </div>
     </div>
-</section>>
+</section>
 
 <footer th:insert="fragments/fragments.html ::footer" class="text-center">
 </footer>
