--- a/src/main/resources/templates/bookSearch.html
+++ b/src/main/resources/templates/bookSearch.html
@@ -7,7 +7,12 @@
       style="background-image:url(/static/img/bibli.jpg)">
 
 <div th:insert="fragments/fragments.html :: nav"></div>
+<section id="about" class="container-fluid">
+    <div class="row">
 
+    </div>
+
+</section>
 <section id="skills">
     <div class="red-divider"></div>
     <div class="heading">
