--- a/src/main/resources/templates/booksByAuthor.html
+++ b/src/main/resources/templates/booksByAuthor.html
@@ -3,7 +3,8 @@
 <head th:insert="fragments/fragments.html ::headertags">
     <title>liste users</title>
 </head>
-<body th:data-spy="scroll" th:data-target=".navbar" th:data-ofset="60" style="background-image:url(/static/img/bibli.jpg)">
+<body th:data-spy="scroll" th:data-target=".navbar" th:data-ofset="60"
+      style="background-image:url(/static/img/bibli.jpg)">
 
 <div th:insert="fragments/fragments.html :: nav"></div>
 <section id="about" class="container-fluid">
@@ -15,26 +16,32 @@
 <section id="skills">
     <div class="red-divider"></div>
     <div class="heading">
-        <h3>Livres de l'auteur correspondant à <td th:text="${research.researchAuthor} "></td><p>ou </p><td th:text="${research.researchTitle }"></td><p>ou </p><td th:text="${research.researchCategory}"></td>  </h3>
-        <div class="container">
-            <div class="row">
-                <div class="red-divider"></div>
-                <div class="container skillancien">
-                    <table align="center">
-
-                        <tr th:each="book: ${books}">
-                            <td th:text ="${book.title}">user</td>
-                            <td th:text ="${book.summary}">user1</td>
-                            <td th:text ="${book.author.firstName}">user2</td>
-                            <td th:text ="${book.author.name}">user2</td>
-                        </tr>
-                    </table>
-                </div>
-                <div class="red-divider"></div>
-
-            </div>
-        </div>
+        <h3>Livres de l'auteur correspondant à
+            <span th:text="${research.researchAuthor} "></span>
+            <p>ou </p>
+            <span th:text="${research.researchTitle }"></span>
+            <p>ou </p>
+            <span th:text="${research.researchCategory}"></span>
+        </h3>
     </div>
+    <div class="container">
+        <div class="red-divider"></div>
+        <div class="row" style="justify-content: center">
+            <div th:each="book: ${books}" class="col-lg-3 col-sm-6 col-xs-12" style="text-align: center">
+                <div style="margin: 10px;">
+                    <span th:text="${book.title}">user</span><br>
+                    <span th:text="${book.author.name}">user2</span><br>
+                    <a th:href="@{|/book/describe/${book.id}|}">
+                        <img th:src="@{${book.getCover()}}" alt="illustration" src=""/></a>
+                </div>
+            </div>
+
+        </div>
+        <div class="red-divider"></div>
+
+    </div>
+    </div>
+
 </section>
 <section id="experience">
     <div class="container-fluid">
