--- a/src/main/resources/templates/fragments/fragments.html
+++ b/src/main/resources/templates/fragments/fragments.html
@@ -13,21 +13,18 @@
 </head>
 <body>
 <div th:fragment="nav">
-    <nav class="navbar navbar-expand-lg navbar-fixed-top navbar-light">
+    <nav class="navbar navbar-expand-md fixed-top navbar-light" >
         <button class="navbar-toggler"  type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon" style="color:white"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="nav nav-tabs justify-content-center" role="tablist">
+        <div class="collapse navbar-collapse" id="navbarNav" style="text-align: center">
+            <ul class="nav navbar-nav mx-auto" role="tablist">
                 <li class="nav-item">
                     <a class="nav-link" href="/home">Home <span class="sr-only">(current)</span></a>
                 </li>
-                <li class="nav-item">
+               <!-- <li class="nav-item">
                     <a class="nav-link" href="/users">Utilisateurs</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/register">S'inscrire</a>
-                </li>
+                </li>-->
                 <li class="nav-item">
                     <a class="nav-link" href="/books">recherche de livre</a>
                 </li>
@@ -37,6 +34,15 @@
                <!-- <li class="nav-item">
                     <a class="nav-link" href="#recommandations">Recommandations</a>
                 </li>-->
+            </ul>
+            <ul class="nav navbar-nav pull-sm-right">
+                <li class="nav-item">
+                    <a class="nav-link" href="/register">S'inscrire</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/login">Connexion</a>
+                </li>
+
             </ul>
         </div>
     </nav>
