--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -17,6 +17,13 @@
     <div class="row">
         <div class="heading">
             <h1> Bibliothèque Municipale</h1>
+
+        </div>
+    </div>
+
+    <div class="row" style="text-align: center">
+        <div class="col-sm-12">
+        <img src="/img/bibli.jpg" style="max-width: 60%"/>
         </div>
     </div>
 </section>
