--- a/src/main/resources/templates/bookList.html
+++ b/src/main/resources/templates/bookList.html
@@ -7,11 +7,14 @@
       style="background-image:url(/static/img/bibli.jpg)">
 
 <div th:insert="fragments/fragments.html :: nav"></div>
+
 <section id="about" class="container-fluid">
     <div class="row">
-
+        <div class="col-sm-12" style="text-align: center;">
+            <span>Nous sommes le : </span>
+            <p th:text="${#temporals.format(localDate, 'dd-MM-yyyy')}"></p>
+        </div>
     </div>
-
 </section>
 <section id="skills">
     <div class="red-divider"></div>
@@ -21,7 +24,7 @@
     <div class="container">
         <div class="row">
             <div th:each="book: ${books}" class="col-lg-3 col-sm-6 col-xs-12">
-                <div  style="margin:10px">
+                <div style="margin:10px">
                     <a th:href="@{|/book/describe/${book.id}|}">
                         <img th:src="@{${book.getCover()}}" alt="illustration" src=""/></a>
                 </div>
