--- a/src/main/resources/templates/fragments/fragments.html
+++ b/src/main/resources/templates/fragments/fragments.html
@@ -31,9 +31,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="/collection">Collection</a>
                 </li>
-               <!-- <li class="nav-item">
-                    <a class="nav-link" href="#recommandations">Recommandations</a>
-                </li>-->
+                <li class="nav-item">
+                    <a class="nav-link" href="/">Recommandations</a>
+                </li>
             </ul>
             <ul class="nav navbar-nav pull-sm-right">
                 <li class="nav-item">
