--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -25,7 +25,7 @@
                     <div class="form-group row">
                         <label th:for="userName" class="col-sm-2 col-form-label">Pseudo</label>
                         <div class="col-sm-4">
-                            <input type="text" class="form-control" id="userName" th:field="*{username}"
+                            <input type="text" class="form-control" id="userName" th:field="*{userName}"
                                    placeholder="Pseudo..."/>
                         </div>
                     </div>
